--- a/index.html
+++ b/index.html
@@ -305,6 +305,31 @@
         width: 10vw;
       }
     }
+    
+    @media screen and (max-width:601px) {
+      #popupForm {
+        left: 50%
+      }
+
+      .admin {
+        top: 0vh;
+        left: 27vw;
+      }
+      #animationContainer {
+    left: 27vw;
+    top: 50vh;
+}
+
+.wish {
+    top: 65vh;
+    left: 24vw;
+}
+
+.agradipjana{
+  top: 85vh;
+}
+    }
+
   </style>
 </head>
 
