--- a/index.html
+++ b/index.html
@@ -312,16 +312,20 @@
       }
 
       .admin {
-        top: 30vh;
-        left: 27vw;
+        top: 20vh;
+        left: 17vw;
+      }
+
+      .admin img{
+        width: 80vw;
       }
       #animationContainer {
-    left: 22vw;
+    left: 18vw;
     top: 50vh;
 }
 
 .wish {
-    top: 55vh;
+    top: 57vh;
     left: 14vw;
 }
 
