--- a/index.html
+++ b/index.html
@@ -83,12 +83,11 @@
     }
 
     .newyear {
-      width: 100vw;
-      height: 100vh;
       position: absolute;
+      top: 10vh;
+      width: 100%;
       display: flex;
       justify-content: center;
-      align-items: center;
     }
 
     .newyear img {
@@ -117,7 +116,7 @@
       width: 100vw;
       display: flex;
       justify-content: center;
-      top: 72vh;
+      top: 62vh;
       margin: 5px 0;
     }
 
@@ -130,7 +129,7 @@
 
     .wish {
       position: absolute;
-      top: 84vh;
+      top: 74vh;
       width: 100vw;
       display: flex;
       justify-content: center;
@@ -156,8 +155,8 @@
       animation-duration: 1s;
     }
 
-    /* 
-    @media screen and (max-width:320px) {
+    
+    /* @media screen and (max-width:320px) {
       #popupForm {
         left: 50%
       }
@@ -299,8 +298,8 @@
       .agradipjana img {
         width: 10vw;
       }
-    }
-     */
+    } */
+    
 
     /* main */
     @media screen and (max-width:601px) {
@@ -308,12 +307,12 @@
         left: 50%
       }
 
-      .admin {
+      .newyear {
         top: 17vh;
         left: 10vw;
       }
 
-      .admin img {
+      .newyear img {
         width: 80vw;
       }
 
