--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     .newyear {
       position: absolute;
       top: 0vh;
-      width: 100%;
+      width: 90%;
       display: flex;
       justify-content: center;
     }
@@ -113,7 +113,7 @@
       display: none;
       text-align: center;
       position: absolute;
-      width: 100vw;
+      width: 90vw;
       display: flex;
       justify-content: center;
       top: 62vh;
@@ -130,7 +130,7 @@
     .wish {
       position: absolute;
       top: 74vh;
-      width: 100vw;
+      width: 90vw;
       display: flex;
       justify-content: center;
       color: white;
@@ -307,24 +307,24 @@
         left: 50%
       }
 
-      .newyear {
+      /* .newyear {
         top: 17vh;
         left: 10vw;
-      }
+      } */
 
       .newyear img {
         width: 80vw;
       }
 
-      #animationContainer {
+      /* #animationContainer {
         left: 15vw;
         top: 50vh;
-      }
+      } */
 
-      .wish {
+      /* .wish {
         top: 57vh;
         left: 14vw;
-      }
+      } */
 
       .agradip img {
         width: 26vw;
