--- a/index.html
+++ b/index.html
@@ -307,10 +307,9 @@
         left: 50%
       }
 
-      /* .newyear {
-        top: 17vh;
-        left: 10vw;
-      } */
+      .newyear {
+        top: 37vh;
+      }
 
       .newyear img {
         width: 80vw;
