--- a/index.html
+++ b/index.html
@@ -330,7 +330,10 @@
       }
 
       .agradipjana {
-        top: 85vh;
+        top: 95vh;
+      }
+      .agradipjana {
+        width: 15vw;
       }
     }
   </style>
