--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
       }
 
       .agradipjana {
-        top: 95vh;
+        top: 90vh;
       }
-      .agradipjana {
-        width: 15vw;
+      .agradipjana img{
+        width: 20vw;
       }
     }
   </style>
