--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="May the coming year be your best one yet, filled with love and success!">
+  <meta name="keywords" content="new year,happy new year,agradip">
+  <meta name="author" content="Agradip Jana">
   <title>Happy New Year 2024</title>
-  <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="aj.jpg" type="image/x-icon">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Lexend&family=Yanone+Kaffeesatz&display=swap');
   </style>
