--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="new year,happy new year,agradip">
   <meta name="author" content="Agradip Jana">
   <title>Happy New Year 2024</title>
-  <link rel="shortcut icon" href="aj.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Lexend&family=Yanone+Kaffeesatz&display=swap');
   </style>
