--- a/index.html
+++ b/index.html
@@ -1,508 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="May the coming year be your best one yet, filled with love and success!">
-  <meta name="keywords" content="new year,happy new year,agradip">
-  <meta name="author" content="Agradip Jana">
-  <title>Happy New Year 2024</title>
-  <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Lexend&family=Yanone+Kaffeesatz&display=swap');
-  </style>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      overflow: hidden;
-      background: url(bg.gif) no-repeat center/cover;
-    }
-
-
-    canvas {
-      display: block;
-    }
-
-    #popupForm {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 20px;
-      border-radius: 5px;
-      background-color: #fff;
-      z-index: 1;
-    }
-
-    #popupForm input {
-      padding: 10px 30px;
-      border: none;
-      background: #eee;
-      outline: none;
-    }
-
-    #popupForm button {
-      padding: 10px;
-      border-radius: 5px;
-      border: none;
-      color: #fff;
-      background-color: #202050;
-    }
-
-    #popupForm button:hover {
-      transition-duration: 1s;
-      background-color: #0f0fa5;
-      cursor: pointer;
-    }
-
-    #overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 0;
-    }
-
-
-    .agradip {
-      position: absolute;
-      top: 5vh;
-      left: 3vw;
-    }
-
-    .agradip img {
-      width: 10vw;
-    }
-
-    .newyear {
-      position: absolute;
-      top: 0vh;
-      width: 90%;
-      display: flex;
-      justify-content: center;
-    }
-
-    .newyear img {
-      width: 35vw;
-      animation: happyNewYearAnimation 2s infinite;
-    }
-
-    @keyframes happyNewYearAnimation {
-      0% {
-        transform: scale(1);
-      }
-
-      50% {
-        transform: scale(1.1);
-      }
-
-      100% {
-        transform: scale(1);
-      }
-    }
-
-    #animationContainer {
-      display: none;
-      text-align: center;
-      position: absolute;
-      width: 90vw;
-      display: flex;
-      justify-content: center;
-      top: 62vh;
-      margin: 5px 0;
-    }
-
-    .happy-new-year {
-      font-size: 3em;
-      font-weight: bold;
-      color: #ffffff;
-      font-family: 'Lexend', sans-serif;
-    }
-
-    .wish {
-      position: absolute;
-      top: 74vh;
-      width: 90vw;
-      display: flex;
-      justify-content: center;
-      color: white;
-      font-family: 'Yanone Kaffeesatz', sans-serif;
-      text-align: center;
-    }
-
-
-    .agradipjana {
-      position: absolute;
-      top: 90vh;
-      right: 3vw;
-    }
-
-    .agradipjana img {
-      width: 4vw;
-      border-radius: 5px;
-    }
-
-    .agradipjana img:hover {
-      transform: rotate(10deg);
-      animation-duration: 1s;
-    }
-
-    
-    /* @media screen and (max-width:320px) {
-      #popupForm {
-        left: 50%
-      }
-
-      #animationContainer {
-        left: 5vw;
-        top: 55vh
-      }
-
-      .wish {
-        top: 65vh;
-        left: 0vw;
-        font-size: 0.7rem;
-        padding: 10px;
-      }
-
-      .admin {
-        top: 20vh;
-        left: 17vw;
-      }
-
-      .admin img {
-        width: 68vw;
-      }
-
-      .agradip img {
-        width: 23vw;
-      }
-
-      .agradipjana img {
-        width: 12vw;
-      }
-    }
-
-    @media screen and (max-width:376px) {
-      #popupForm {
-        left: 55%
-      }
-
-      #animationContainer {
-        left: 10vw;
-        top: 55vh
-      }
-
-      .wish {
-        top: 65vh;
-        left: 0vw;
-        font-size: 0.7rem;
-        padding: 10px;
-      }
-
-      .admin {
-        top: 15vh;
-        left: 17vw;
-      }
-
-      .admin img {
-        width: 68vw;
-      }
-
-      .agradip img {
-        width: 20vw;
-      }
-
-      .agradipjana img {
-        width: 10vw;
-      }
-    }
-
-    @media screen and (max-width:426px) {
-      #popupForm {
-        left: 55%
-      }
-
-      #animationContainer {
-        left: 17vw;
-        top: 55vh;
-      }
-
-      .wish {
-        top: 65vh;
-        left: 0vw;
-        font-size: 0.7rem;
-        padding: 10px;
-      }
-
-      .admin {
-        top: 8vh;
-        left: 17vw;
-      }
-
-      .admin img {
-        width: 68vw;
-      }
-
-      .agradip img {
-        width: 20vw;
-      }
-
-      .agradipjana img {
-        width: 10vw;
-      }
-    }
-
-    @media screen and (max-width:769px) {
-      #popupForm {
-        left: 50%
-      }
-
-      #animationContainer {
-        left: 30vw;
-        top: 55vh;
-      }
-
-      .wish {
-        top: 67vh;
-        left: 30vw;
-        font-size: 0.7rem;
-        padding: 10px;
-      }
-
-      .admin {
-        top: -8vh;
-        left: 25vw;
-      }
-
-      .admin img {
-        width: 50vw;
-      }
-
-      .agradip img {
-        width: 10vw;
-      }
-
-      .agradipjana {
-        top: 80vh;
-      }
-
-      .agradipjana img {
-        width: 10vw;
-      }
-    } */
-    
-
-    /* main */
-    @media screen and (max-width:601px) {
-      #popupForm {
-        left: 50%
-      }
-
-      .newyear {
-        top: 27vh;
-      }
-
-      .newyear img {
-        width: 80vw;
-      }
-
-      /* #animationContainer {
-        left: 15vw;
-        top: 50vh;
-      } */
-
-      /* .wish {
-        top: 57vh;
-        left: 14vw;
-      } */
-
-      .agradip img {
-        width: 26vw;
-      }
-
-      .agradipjana {
-        top: 87vh;
-      }
-      .agradipjana img{
-        width: 7vw;
-      }
-    }
-  </style>
-</head>
-
-<body>
-
-
-
-  <div class="wish">
-    <p>In the coming year, I hope you have all the courage and strength to fight back adversities. <br> Happy New Year
-      wishes to you and your family.</p>
-  </div>
-
-
-  <div id="overlay"></div>
-
-  <div id="popupForm">
-    <form onsubmit="submitForm(); return false;">
-      <!-- <label for="inputValue"></label> -->
-      <input type="text" id="inputValue" placeholder="Enter Your First Name" required><br><br>
-      <div style="text-align: center;"><button type="submit">Submit</button></div>
-    </form>
-  </div>
-  <div id="animationContainer" class="happy-new-year"></div>
-  <canvas id="fireworksCanvas"></canvas>
-
-  <div class="agradip">
-    <img src="logo2.jpg" alt="logo">
-  </div>
-  <div class="newyear">
-    <img src="logo.jpg" alt="logo">
-  </div>
-  <script>
-    function openForm() {
-      document.getElementById('popupForm').style.display = 'block';
-      document.getElementById('overlay').style.display = 'block';
-    }
-
-    function submitForm() {
-      var inputValue = document.getElementById('inputValue').value;
-
-      var animationContainer = document.getElementById('animationContainer');
-      animationContainer.innerText = 'Hey, ' + inputValue;
-      animationContainer.style.display = 'block';
-
-      document.getElementById('popupForm').style.display = 'none';
-      document.getElementById('overlay').style.display = 'none';
-    }
-  </script>
-
-  <script>
-    // Wait for the document to be ready
-    document.addEventListener('DOMContentLoaded', function () {
-      // Open the form after a delay (e.g., 2 seconds)
-      setTimeout(function () {
-        openForm();
-      }, 2000);
-    });
-  </script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      // Set up the canvas
-      var canvas = document.getElementById('fireworksCanvas');
-      var ctx = canvas.getContext('2d');
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-
-      // Firework objects
-      var fireworks = [];
-
-      // Create a Firework class
-      class Firework {
-        constructor() {
-          this.x = Math.random() * canvas.width;
-          this.y = canvas.height;
-          this.size = Math.random() * 3 + 2;
-          this.speedY = Math.random() * 3 + 1;
-          this.color = `hsl(${Math.random() * 360}, 100%, 50%)`;
-          this.isActive = true;
-        }
-
-        update() {
-          this.y -= this.speedY;
-          if (this.y < 0) {
-            this.isActive = false;
-            createExplosions(this.x, this.y);
-          }
-        }
-
-        draw() {
-          ctx.fillStyle = this.color;
-          ctx.fillRect(this.x, this.y, this.size, this.size * 5);
-        }
-      }
-
-      // Explosion objects
-      var explosions = [];
-
-      // Create an Explosion class
-      class Explosion {
-        constructor(x, y) {
-          this.x = x;
-          this.y = y;
-          this.size = Math.random() * 2 + 1;
-          this.speedX = (Math.random() - 0.5) * 8;
-          this.speedY = (Math.random() - 0.5) * 8;
-          this.color = `hsl(${Math.random() * 360}, 100%, 50%)`;
-          this.life = 20;
-        }
-
-        update() {
-          this.x += this.speedX;
-          this.y += this.speedY;
-          this.life--;
-        }
-
-        draw() {
-          ctx.fillStyle = this.color;
-          ctx.beginPath();
-          ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-          ctx.fill();
-        }
-      }
-
-      function createExplosions(x, y) {
-        for (let i = 0; i < 5; i++) {
-          var explosion = new Explosion(x, y);
-          explosions.push(explosion);
-        }
-      }
-
-      function animate() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-        // Create new fireworks
-        if (Math.random() < 0.03) {
-          fireworks.push(new Firework());
-        }
-
-        // Update and draw fireworks
-        for (let i = fireworks.length - 1; i >= 0; i--) {
-          fireworks[i].update();
-          fireworks[i].draw();
-
-          if (!fireworks[i].isActive) {
-            fireworks.splice(i, 1);
-          }
-        }
-
-        // Update and draw explosions
-        for (let i = explosions.length - 1; i >= 0; i--) {
-          explosions[i].update();
-          explosions[i].draw();
-
-          if (explosions[i].life <= 0) {
-            explosions.splice(i, 1);
-          }
-        }
-
-        requestAnimationFrame(animate);
-      }
-
-      animate();
-    });
-  </script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="May the coming year be your best one yet, filled with love and success!"
+    />
+    <meta name="keywords" content="new year,happy new year,agradip" />
+    <meta name="author" content="Agradip Jana" />
+    <title>Happy New Year 2024</title>
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <div class="wish">
+      <p>
+        In the coming year, I hope you have all the courage and strength to
+        fight back adversities. <br />
+        Happy New Year wishes to you and your family.
+      </p>
+    </div>
+
+    <div id="overlay"></div>
+
+    <div id="popupForm">
+      <form onsubmit="submitForm(); return false;">
+        <!-- <label for="inputValue"></label> -->
+        <input
+          type="text"
+          id="inputValue"
+          placeholder="Enter Your First Name"
+          required
+        /><br /><br />
+        <div style="text-align: center">
+          <button type="submit">Submit</button>
+        </div>
+      </form>
+    </div>
+    <div id="animationContainer" class="happy-new-year"></div>
+    <canvas id="fireworksCanvas"></canvas>
+
+    <div class="agradip">
+      <img src="logo2.jpg" alt="logo" />
+    </div>
+    <div class="newyear">
+      <img src="logo.jpg" alt="logo" />
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
+
